# nemo

./: .gitignore  README.md
.github/workflows/: ci.yml
src/libnes/: cartridge.hpp  console.hpp  cpu_operations.hpp  ppu.hpp  ppu_scroll.hpp
src/libnes/mappers/: mmc1.hpp  nrom.hpp
test/: CMakeLists.txt
test/integration_tests/: ppu_vbl_nmi.cpp
test/unit_tests/: bus_test.cpp  mmc1_test.cpp  ppu_scroll_test.cpp  ppu_test.cpp
